Fix huge slowdown when saving long text into the text shape

There were two issues:

1) paintPaths() used to rasterize **all** the character paths, even
   the ones outside the current painter's clip rect. That was obviously
   slow, because the tiled vector rendering code forced it to rasterize
   the whole text 10+ times.

2) paintPaths() passed the bounding outline rect incorrectly to the
   descendants. Instead of passing the outline of the child shape
   it passed the outline of the root shape, which caused
   KoClipMaskPainter to allocate too huge buffer for rendering the
   text.

BUG:463471